--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -1,54 +1,83 @@
-﻿@model OCRC.Models.DummyDate
+﻿
 @{
-    ViewBag.Title = "Resule";
+    ViewBag.Title = "Sport Search";
 }
 
-<h2>Resule</h2>
-<span>@ViewBag.Message</span>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Id)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Something)
-        </th>
+        <div class="row">
+            <!-- left section -->
+            <div class="col-xs-12 col-md-2">
+                <!-- Single button -->
+                <div class="btn-group">
+                    <h3>Sport</h3>
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Action <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li role="presentation" class="active"><a href="#">Basketball</a></li>
+                        <li role="presentation"><a href="#">Football</a></li>
+                        <li role="presentation"><a href="#">Pickleball</a></li>
+                        <li role="presentation"><a href="#">Basketball</a></li>
+                        <li role="presentation"><a href="#">Football</a></li>
+                        <li role="presentation"><a href="#">Pickleball</a></li>
+                    </ul>
+                </div>
 
 
-    </tr>
+                <div class="btn-group">
+                    <h3>Filter</h3>
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Action <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li role="presentation" class="active"><a href="#">School</a></li>
+                        <li role="presentation"><a href="#">Grade</a></li>
+                        <li role="presentation"><a href="#">Name</a></li>
+                        <li role="presentation"><a href="#">Age</a></li>
+                    </ul>
+                </div>
 
-    @*@foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.serviceDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.vin)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.serviceType)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.serviceMileage)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.serviceAmount)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </div>
+            <!-- right section -->
+            <br>
+            <div class="col-xs-12 col-md-10">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Username</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>mdo</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>fat</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>Larry</td>
+                            <td>the Bird</td>
+                            <td>twitter</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">4</th>
+                            <td>Larry</td>
+                            <td>the Bird</td>
+                            <td>twitter</td>
+                        </tr>
+                    </tbody>
 
-            </td>
-        </tr>
-    }*@
+                </table>
+            </div>
+        </div>
 
-</table>
