--- a/OCRC/Views/Shared/_Layout.cshtml
+++ b/OCRC/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
 
-                        <li role="presentation" class="active">@Html.ActionLink("Home","Index","Home")</li>
+                        <li role="presentation" class="active">@Html.ActionLink("Home", "Index", "Home")</li>
                         <li role="presentation">@Html.ActionLink("Report", "Report", "Home")</li>
                         <li role="presentation">@Html.ActionLink("Data", "Data", "Home")</li>
                         <li role="presentation">@Html.ActionLink("Tracking", "Result", "Home")</li>
@@ -74,12 +74,13 @@
             </form>
             <!-- search form end -->
         </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Ogden City</p>
-        </footer>
+        <div class="container body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Ogden City</p>
+            </footer>
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
