change layout page and reuslt page

--- a/OCRC/Views/Shared/_Layout.cshtml
+++ b/OCRC/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title -Ogdent City</title>
     @Styles.Render("~/Content/bootstrap.min.css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -35,9 +35,9 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
 
-                        <li role="presentation" class="active">@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li role="presentation">@Html.ActionLink("Report", "Report", "Home")</li>
-                        <li role="presentation">@Html.ActionLink("Data", "Data", "Home")</li>
+                        <li role="presentation" class="active">@Html.ActionLink("Home", "Result", "Home")</li>
+                        <li role="presentation">@Html.ActionLink("Report", "Result", "Home")</li>
+                        <li role="presentation">@Html.ActionLink("Data", "Result", "Home")</li>
                         <li role="presentation">@Html.ActionLink("Tracking", "Result", "Home")</li>
                     </ul>
 
