make some change to the result view page

--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -11,7 +11,7 @@
         <div class="btn-group">
             <h3>Sport</h3>
             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Action <span class="caret"></span>
+                Filter by Sport Type <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
                 <li role="presentation" class="active"><a href="#">Basketball</a></li>
@@ -27,7 +27,7 @@
         <div class="btn-group">
             <h3>Filter</h3>
             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Action <span class="caret"></span>
+                More Filter <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
                 <li role="presentation" class="active"><a href="#">School</a></li>
