--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -5,40 +5,81 @@
 
 
 <div class="row">
-    <!-- left section -->
-    <div class="col-xs-12 col-md-2">
-        <!-- Single button -->
-        <div class="btn-group">
-            <h3>Sport</h3>
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Action <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li role="presentation" class="active"><a href="#">Basketball</a></li>
-                <li role="presentation"><a href="#">Football</a></li>
-                <li role="presentation"><a href="#">Pickleball</a></li>
-                <li role="presentation"><a href="#">Basketball</a></li>
-                <li role="presentation"><a href="#">Football</a></li>
-                <li role="presentation"><a href="#">Pickleball</a></li>
-            </ul>
+        <!-- filter start -->
+        <div class="col-md-12">
+          <!-- Nav tabs -->
+          <ul class="nav nav-tabs nav-justified" role="tablist">
+            <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Filter By Sport</a></li>
+            <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">More Filter</a></li>
+            
+          </ul>
+
+          <!-- Tab panes -->
+          <div class="tab-content">
+            <div role="tabpanel" class="tab-pane active" id="home">
+              <form class="form-inline">
+                 <!-- Single button -->
+                      <label class="checkbox-inline">
+                        <input type="checkbox" value="">Option 1
+                      </label>
+                      <label class="checkbox-inline">
+                        <input type="checkbox" value="">Option 2
+                      </label>
+                      <label class="checkbox-inline">
+                        <input type="checkbox" value="">Option 3
+                      </label>
+                      <label class="checkbox-inline">
+                        <input type="checkbox" value="">Option 1
+                      </label>
+                      <label class="checkbox-inline">
+                        <input type="checkbox" value="">Option 2
+                      </label>
+                      <label class="checkbox-inline">
+                        <input type="checkbox" value="">Option 3
+                      </label>
+                </form> 
+            </div>
+
+            <div role="tabpanel" class="tab-pane" id="profile">
+              <form class="form-inline">
+                <label class="checkbox-inline">
+                        <input type="checkbox" value="">Option 1
+                      </label>
+                      <label class="checkbox-inline">
+                        <input type="checkbox" value="">Option 2
+                      </label>
+                      <label class="checkbox-inline">
+                        <input type="checkbox" value="">Option 3
+                      </label>
+                  
+                  
+                  <div class="form-group ">
+                    <label for="School" class="sr-only">School</label>
+                    <input type="text" class="form-control"  placeholder="School">
+                  </div>
+                  <div class="form-group">
+                    <label for="Name" class="sr-only">Name</label>
+                    <input type="text" class="form-control"  placeholder="Name">
+                  </div>
+                  <div class="form-group">
+                    <label for="Year" class="sr-only">Year</label>
+                    <input type="text" class="form-control"  placeholder="Year">
+                  </div>
+                  <button type="submit" class="btn btn-primary">Search</button>
+                
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Age <span class="caret"></span>
+                </button>
+                
+              </form>
+            </div>
+           
+          </div>
+
         </div>
-
-
-        <div class="btn-group">
-            <h3>Filter</h3>
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Action <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li role="presentation" class="active"><a href="#">School</a></li>
-                <li role="presentation"><a href="#">Grade</a></li>
-                <li role="presentation"><a href="#">Name</a></li>
-                <li role="presentation"><a href="#">Age</a></li>
-            </ul>
+                
         </div>
-
-    </div>
-    <!-- right section -->
+        <!-- filter end -->
     <br>
     <div class="col-xs-12 col-md-10">
         <table class="table table-striped">
