--- a/OCRC/Views/Home/Index.cshtml
+++ b/OCRC/Views/Home/Index.cshtml
@@ -1,8 +1,20 @@
 ﻿
-@{
-    ViewBag.Title = "Home Page";
+@{ 
+    Layout = "";
 }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>@ViewBag.Title -Ogdent City</title>
+    @Styles.Render("~/Content/bootstrap.min.css")
+    @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/Site.css")
 
+</head>
 <body>
     <div class="container">
         <div class="card card-container">
@@ -24,4 +36,10 @@
             </a>
         </div>
     </div>
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
 </body>
+</html>
+
+
