--- a/OCRC/Views/Home/Index.cshtml
+++ b/OCRC/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Home Page";
+   
 }
 
 <body>
@@ -19,9 +20,9 @@
                 </div>
                 <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
             </form><!-- /form -->
-            <a href="#" class="forgot-password">
-                Forgot the password?
-            </a>
+            <ul>
+                <li class="forgot-password">@Html.ActionLink("Forgot the password?", "ForgotPassword", "Home")</li>
+            </ul>
         </div>
     </div>
 </body>
