change layout page

--- a/OCRC/Views/Shared/_Layout.cshtml
+++ b/OCRC/Views/Shared/_Layout.cshtml
@@ -39,8 +39,8 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
 
-                        <li role="presentation" class="active">@Html.ActionLink("Home", "Result", "Home")</li>
-                        <li role="presentation">@Html.ActionLink("Report", "Result", "Home")</li>
+                        <li role="presentation" class="active">@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li role="presentation">@Html.ActionLink("Report", "About", "Home")</li>
                         <li role="presentation">@Html.ActionLink("Data", "Result", "Home")</li>
                         <li role="presentation">@Html.ActionLink("Tracking", "Result", "Home")</li>
                     </ul>
