hide the header

--- a/OCRC/Views/Home/ForgotPassword.cshtml
+++ b/OCRC/Views/Home/ForgotPassword.cshtml
@@ -2,7 +2,13 @@
 @{
     ViewBag.Title = "ForgotPassword";
 }
-
+@{
+    Layout = "";
+}
+<head>
+    @Styles.Render("~/Content/bootstrap.min.css")
+    @Styles.Render("~/Content/Site.css")
+</head>
 <style>
     .form-gap {
         padding-top: 70px;
