--- a/OCRC/Views/Account/RegisterUser.cshtml
+++ b/OCRC/Views/Account/RegisterUser.cshtml
@@ -1,39 +1,52 @@
 ﻿
 @{
-    ViewBag.Title = "Home Page";
-
+    ViewBag.Title = "RegisterUser";
 }
 
-@{
-    Layout = "";
-}
-<head>
-    @Styles.Render("~/Content/bootstrap.min.css")
-    @Styles.Render("~/Content/Site.css")
-</head>
-<body>
-    <div class="container">
-        <div class="card card-container">
-            <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
-            <p id="profile-name" class="profile-name-card"></p>
-            <form class="form-signin">
-                <span id="reauth-email" class="reauth-email"></span>
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                <div id="remember" class="checkbox">
-                    <label>
-                        <input type="checkbox" value="remember-me"> Remember me
-                    </label>
-                </div>
-                <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
-            </form><!-- /form -->
-            <ul>
-                <li class="forgot-password">@Html.ActionLink("Forgot the password?", "ForgotPassword", "Home")</li>
-            </ul>
+
+<div class="col-xs-12 col-md-12">
+    <h3>Register New User</h3>
+    <form class="col-xs-12 col-md-4 col-md-offset-3">
+        <div class="form-group">
+            <label for="exampleInputEmail1">Last Name</label>
+            <input type="text" class="form-control" placeholder="Last Name">
         </div>
-    </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">First Name</label>
+            <input type="text" class="form-control" placeholder="First Name">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Role</label><br>
+            <label class="checkbox-inline">
+                <input type="checkbox" value="">Admit
+            </label>
+            <label class="checkbox-inline">
+                <input type="checkbox" value="">Clerk
+            </label>
+            <label class="checkbox-inline">
+                <input type="checkbox" value="">Cocah
+            </label>
+            <label class="checkbox-inline">
+                <input type="checkbox" value="">School
+            </label>
 
-</body>
-</html>
 
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Team</label>
+            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Team">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">School</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="School">
+        </div>
+
+
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+</div>
 
