--- a/OCRC/Views/Shared/_Layout.cshtml
+++ b/OCRC/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <title>@ViewBag.Title -Ogdent City</title>
     @Styles.Render("~/Content/bootstrap.min.css")
     @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/Site.css")
     
 
 
@@ -32,7 +33,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Ogden City</a>
+                    <a class="navbar-brand" href="/">Ogden City</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -46,7 +47,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="/Account/Login">Login</a></li>
-                        <li><a href="/Account/Register">Register</a></li>
+                        <li><a href="/Account/RegisterUser">Register</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
