--- a/OCRC/Views/Home/Index.cshtml
+++ b/OCRC/Views/Home/Index.cshtml
@@ -36,7 +36,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/Login")
 </body>
-</html>
+
 
 
