--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -3,82 +3,81 @@
     ViewBag.Title = "Sport Search";
 }
 
+<div class="collapse navbar-collapse">
+    @Html.Partial("_SearchForm")
 
-@Html.Partial("_SearchForm")
-<div class="row">
-    <!-- filter start -->
-    <div class="col-md-12">
-        <!-- Nav tabs -->
-        <ul class="nav nav-tabs nav-justified" role="tablist">
-            <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Filter By Sport</a></li>
-            <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">More Filter</a></li>
+    <div class="row">
 
-        </ul>
+        <!-- filter start -->
+        <div class="col-md-12">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs nav-justified" role="tablist">
+                <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Filter By Sport</a></li>
+                <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">More Filter</a></li>
 
-        <!-- Tab panes -->
-        <div class="tab-content">
-            <div role="tabpanel" class="tab-pane active" id="home">
-                <form class="form-inline">
-                    <!-- Single button -->
-                    <label class="checkbox-inline">
-                        <input type="checkbox" value="">Option 1
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" value="">Option 2
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" value="">Option 3
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" value="">Option 1
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" value="">Option 2
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" value="">Option 3
-                    </label>
-                </form>
-            </div>
+            </ul>
 
-            <div role="tabpanel" class="tab-pane" id="profile">
-                <form class="form-inline">
-                    <label class="checkbox-inline">
-                        <input type="checkbox" value="">Option 1
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" value="">Option 2
-                    </label>
-                    <label class="checkbox-inline">
-                        <input type="checkbox" value="">Option 3
-                    </label>
+            <!-- Tab panes -->
+            
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="home">
+                    <form class="form-inline">
+                        <!-- Single button -->
+                        <label class="checkbox-inline">
+                            <input type="checkbox" value="">Option 1
+                        </label>
+                        <label class="checkbox-inline">
+                            <input type="checkbox" value="">Option 2
+                        </label>
+                        <label class="checkbox-inline">
+                            <input type="checkbox" value="">Option 3
+                        </label>
+                        <label class="checkbox-inline">
+                            <input type="checkbox" value="">Option 1
+                        </label>
+                        <label class="checkbox-inline">
+                            <input type="checkbox" value="">Option 2
+                        </label>
+                        <label class="checkbox-inline">
+                            <input type="checkbox" value="">Option 3
+                        </label>
+                    </form>
+                </div>
 
+                <div role="tabpanel" class="tab-pane" id="profile">
+                    <form class="form-inline">
+                        
+                        <div class="form-group ">
+                            <label for="School" class="sr-only">School</label>
+                            <input type="text" class="form-control" placeholder="School">
+                        </div>
+                        <div class="form-group">
+                            <label for="Name" class="sr-only">First Name</label>
+                            <input type="text" class="form-control" placeholder="FirstName">
+                        </div>
+                        <div class="form-group">
+                            <label for="Name" class="sr-only">Last Name</label>
+                            <input type="text" class="form-control" placeholder="LastName">
+                        </div>
+                        <div class="form-group">
+                            <label for="Year" class="sr-only">Year</label>
+                            <input type="text" class="form-control" placeholder="Year">
+                        </div>
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Age <span class="caret"></span>
+                        </button>
+                        <button type="submit" class="btn btn-primary">Search</button>
 
-                    <div class="form-group ">
-                        <label for="School" class="sr-only">School</label>
-                        <input type="text" class="form-control" placeholder="School">
-                    </div>
-                    <div class="form-group">
-                        <label for="Name" class="sr-only">Name</label>
-                        <input type="text" class="form-control" placeholder="Name">
-                    </div>
-                    <div class="form-group">
-                        <label for="Year" class="sr-only">Year</label>
-                        <input type="text" class="form-control" placeholder="Year">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Search</button>
+                        
 
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Age <span class="caret"></span>
-                    </button>
+                    </form>
+                </div>
 
-                </form>
             </div>
 
         </div>
 
     </div>
-
 </div>
 <!-- filter end -->
     <!-- right section -->
