--- a/OCRC/Views/Shared/_Layout.cshtml
+++ b/OCRC/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
         <!--slide menu start-->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            @Html.Partial("_SearchForm")
+            @Html.Partial("../Home/_SearchForm")
             <div class="row">
                 <!-- filter start -->
                 <div class="col-md-12 col-xs-12">
