--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -10,7 +10,7 @@
 
        @Html.Partial("_SearchForm")
 
-        <form class="form-inline">
+        <form class="row form-inline">
             <h3>filter by sport</h3>
             <div class="form-group ">
                 <label for="School" class="sr-only">School</label>
