fix size of UserList page

--- a/OCRC/Views/Account/UserList.cshtml
+++ b/OCRC/Views/Account/UserList.cshtml
@@ -4,8 +4,8 @@
 }
 
 <script src="https://use.fontawesome.com/1e803d693b.js"></script>
-<div class="container">
-    <div class="row">
+
+    <div class="row col-md-12">
         <div class="panel panel-default user_panel">
             <div class="panel-heading">
                 <h3 class="panel-title">User List</h3>
@@ -48,5 +48,5 @@
             </div>
         </div>
     </div>
-</div>
+
 
