--- a/OCRC/Views/Shared/_Layout.cshtml
+++ b/OCRC/Views/Shared/_Layout.cshtml
@@ -8,13 +8,8 @@
     <title>@ViewBag.Title -Ogdent City</title>
     @Styles.Render("~/Content/Site.css")
     @Styles.Render("~/Content/bootstrap.min.css")
-    @Styles.Render("~/Content/slideMenu.css")
-   
+    @Styles.Render("~/Content/slideMenu.css")   
     @Scripts.Render("~/bundles/modernizr")
-
-
-
-
 
     <!-- Latest compiled and minified CSS -->
     @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">*@
@@ -51,6 +46,7 @@
                         <li role="presentation">@Html.ActionLink("Report", "About", "Home")</li>
                         <li role="presentation">@Html.ActionLink("Data", "Result", "Home")</li>
                         <li role="presentation">@Html.ActionLink("Tracking", "Result", "Home")</li>
+                        <li role="presentation">@Html.ActionLink("Register user", "UserList", "Account")</li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
