--- a/OCRC/Views/Account/UserList.cshtml
+++ b/OCRC/Views/Account/UserList.cshtml
@@ -5,7 +5,7 @@
 
 <script src="https://use.fontawesome.com/1e803d693b.js"></script>
 
-    <div class="row col-md-12">
+    <div class="row">
         <div class="panel panel-default user_panel">
             <div class="panel-heading">
                 <h3 class="panel-title">User List</h3>
