--- a/OCRC/Content/Site.css
+++ b/OCRC/Content/Site.css
@@ -74,8 +74,8 @@
     box-sizing: border-box;
 }
 
-.form-signin #inputEmail,
-.form-signin #inputPassword {
+.form-signin #email,
+.form-signin #password {
     direction: ltr;
     height: 44px;
     font-size: 16px;
