--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -64,11 +64,10 @@
         </form>
         <form class="row form-inline">
 
-            <h3>filter by sport</h3>
-            <div class="form-group ">
-                <label for="School" class="sr-only">School</label>
-                <input type="text" class="form-control" placeholder="School">
-            </div>
+            <h3>More Filter</h3>
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Grade <span class="caret"></span>
+            </button>
             
             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Age <span class="caret"></span>
@@ -76,8 +75,6 @@
             <br />
             <br />
             <button type="submit" class="btn btn-primary">Search</button>
-
-
 
         </form>
     </div>
@@ -135,9 +132,10 @@
         <div class="col-md-12 col-xs-12">
 
             <div class="col-xs-10">
-                <h3>Filter By Sport</h3>
+                
 
                 <form>
+                    <h3>Filter By Sport</h3>
                     <div class="checkbox">
                         <label>
                             <input type="checkbox"> Check me out
@@ -160,36 +158,25 @@
                     </div>
 
                 </form>
-            </div>
 
-            <div class="col-xs-10">
-                <h3>more filter</h3>
+                <form>
 
-                <form class="form-inline">
+                    <h3>More Filter</h3>
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Grade <span class="caret"></span>
+                    </button>
 
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Check me out
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Check me out
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Check me out
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Check me out
-                        </label>
-                    </div>
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Age <span class="caret"></span>
+                    </button>
+                    <br />
+                    <br />
+                    <button type="submit" class="btn btn-primary">Search</button>
 
                 </form>
             </div>
+
+            
 
         </div>
 
