--- a/OCRC/Views/Home/_KidDetails.cshtml
+++ b/OCRC/Views/Home/_KidDetails.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OCRC.Models.Kid
-
+@*might need a different viewModel*@
 <div>
-    <h4>Kid</h4>
+    <h4>Kid PartialView</h4>
+    <h2>Should use code from previous commit</h2>
     <hr />
     <dl class="dl-horizontal">
         <dt>
