--- a/OCRC/Views/Account/ForgotPassword.cshtml
+++ b/OCRC/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model OCRC.Models.ResetPasswordModel
 @{
     ViewBag.Title = "ForgotPassword";
 }
@@ -16,8 +16,13 @@
 </style>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<div class="form-gap"></div>
-<div class="container">
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary()
+    <div class="form-gap"></div>
+    <div class="container">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <div class="panel panel-default">
@@ -50,3 +55,4 @@
         </div>
     </div>
 </div>
+}
