pull data from OCRC_API

--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -1,5 +1,4 @@
 ﻿
-
 @{
     ViewBag.Title = "Sport Search";
 }
@@ -41,7 +40,7 @@
 
         <form>
             <h3>Filter By Sport</h3>
-            @foreach (var item in Model)
+            @foreach (var item in Model[0])
             {
                 <div class="checkbox">
                     <label>
@@ -86,37 +85,27 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col">ID</th>
                 <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
-                <th scope="col">Username</th>
+                <th scope="col">Age</th>
+                <th scope="col">School</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>mdo</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>twitter</td>
-            </tr>
-            <tr>
-                <th scope="row">4</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>twitter</td>
-            </tr>
+            @foreach (var item in Model[1])
+            {
+                <tr>
+                    <th scope="row">@item.kidID</th>
+                    <td>@item.fname</td>
+                    <td>@item.lname</td>
+                    <td>@item.age</td>
+                    <td>@item.school</td>
+
+                </tr>
+            }
+           
+            
         </tbody>
     </table>
 
@@ -136,7 +125,7 @@
 
                 <form>
                     <h3>Filter By Sport</h3>
-                    @foreach (var item in Model)
+                    @foreach (var item in Model[0])
                     {
                         <div class="checkbox">
                             <label>
