--- a/OCRC/Views/Shared/_Layout.cshtml
+++ b/OCRC/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                     </button>
 
 
-                    <a class="navbar-brand" href="#">Ogden City</a>
+                    <a class="navbar-brand" href="/">Ogden City</a>
                 </div>
 
 
@@ -43,18 +43,13 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-
-                        <li role="presentation" class="active">@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li role="presentation">@Html.ActionLink("Report", "About", "Home")</li>
-                        <li role="presentation">@Html.ActionLink("Data", "Result", "Home")</li>
                         <li role="presentation">@Html.ActionLink("Result", "Result", "Home")</li>
-                        <li role="presentation">@Html.ActionLink("Register user", "RegisterUser", "Account")</li>
-                        <li role="presentation">@Html.ActionLink("User List", "UserList", "Account")</li>
                     </ul>
 
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Logout</a></li>
-                        <li><a href="#">Username</a></li>
+                    <ul id="userLinks" class="nav navbar-nav navbar-right">
+                        <li><a href="/Account/logout">Logout</a></li>
+
+                        <li><a href="/Account/UserList">Admin</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
