--- a/OCRC/Views/Account/UserList.cshtml
+++ b/OCRC/Views/Account/UserList.cshtml
@@ -8,8 +8,8 @@
     <div class="row">
         <div class="panel panel-default user_panel">
             <div class="panel-heading">
-                <h3 class="panel-title">User List</h3>
-                <span class="btn btn-primary">@Html.ActionLink("Register user", "RegisterUser", "Account")</span>
+                <h3 class="panel-title">User List </h3>
+                
 
             </div>
             <div class="panel-body">
@@ -46,6 +46,7 @@
                             </tr>
                         </tbody>
                     </table>
+                    <span class="btn btn-default">@Html.ActionLink("Register user", "RegisterUser", "Account")</span>
                 </div>
             </div>
         </div>
