Working on Result.cshtml to have it use the data from the database

--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model OCRC.Models.SearchViewModel
 
 @{
     ViewBag.Title = "Sport Search";
@@ -41,7 +41,7 @@
 
         <form>
             <h3>Filter By Sport</h3>
-            @foreach (var item in Model)
+            @foreach (var item in Model.sports)
             {
                 <div class="checkbox">
                     <label>
@@ -89,34 +89,22 @@
                 <th scope="col">#</th>
                 <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
-                <th scope="col">Username</th>
+                <th scope="col">Year</th>
             </tr>
         </thead>
         <tbody>
+        @{ int num = 1;}
+      @foreach (var item in Model.searches)
+      {
+          
             <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>mdo</td>
+                <th scope="row">@num</th>@{num++;}
+                <td>@item.fname</td>
+                <td>@item.lname</td>
+                <td>@item.year</td>
             </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>twitter</td>
-            </tr>
-            <tr>
-                <th scope="row">4</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>twitter</td>
-            </tr>
+                        
+         }
         </tbody>
     </table>
 
@@ -136,7 +124,7 @@
 
                 <form>
                     <h3>Filter By Sport</h3>
-                    @foreach (var item in Model)
+                    @foreach (var item in Model.sports)
                     {
                         <div class="checkbox">
                             <label>
