Added More Columns

--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -91,6 +91,10 @@
                 <th scope="col">Last Name</th>
                 <th scope="col">Year</th>
                 <th scope="col">Rank</th>
+                <th scope="col">Age</th>
+                <th scope="col">School</th>
+                <th scope="col">Grade</th>
+                
             </tr>
         </thead>
         <tbody>
@@ -104,6 +108,11 @@
                 <td>@item.lname</td>
                 <td>@item.year</td>
                 <td>@item.rank[0].rank</td>
+                <td>@item.age</td>
+                <td>@item.school</td>
+                <td>@item.grade</td>
+                
+
             </tr>
                         
          }
