--- a/OCRC/Views/Account/ResetPassword.cshtml
+++ b/OCRC/Views/Account/ResetPassword.cshtml
@@ -36,7 +36,7 @@
                         <div class="form-group">
                             <!-- Button -->
                             <div class="  col-sm-offset-3 col-sm-9">
-                                <button id="btn-signup" type="button" class="btn btn-success">Submit</button>
+                                <input id="btn-signup" type="submit" class="btn btn-success" value="Submit">
                             </div>
                         </div>
                     </form>
