--- a/OCRC/Views/Shared/_Layout.cshtml
+++ b/OCRC/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     @Styles.Render("~/Content/bootstrap.min.css")
     @Styles.Render("~/Content/slideMenu.css") 
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+
 
     <!-- Latest compiled and minified CSS -->
     @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">*@
