--- a/OCRC/Views/Shared/_Layout.cshtml
+++ b/OCRC/Views/Shared/_Layout.cshtml
@@ -47,6 +47,8 @@
                     </ul>
                     
                     <input type="hidden" name="access" value=@ViewBag.access /><!-- store the access level for user link population-->
+                    <input type="hidden" name="team" value=@ViewBag.team /><!-- store the team for user link population-->
+                    <input type="hidden" name="school" value=@ViewBag.school /><!-- store the school for user link population-->
 
                     <ul id="userLinks" class="nav navbar-nav navbar-right">
                         <li><a href="/Account/logout">Logout</a></li>
