--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -32,7 +32,7 @@
 </div>
 <br />
 
-<div class="col-md-2">
+<div class="col-md-2 col-sm-2">
 
     <div class="row collapse navbar-collapse">
         <!-- filter start -->
@@ -80,7 +80,7 @@
 
 </div>
 
-<div class="col-md-10 col-sm-12 col-xs-12">
+<div class="col-md-10 col-sm-10 col-xs-12">
 
     <table class="table table-striped">
         <thead>
